<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="initial_score">0</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="next_activity">Next Activity</string>
    <string name="battery_decrease">-</string>
    <string name="battery_increase">+</string>
    <string name="reset">Reset</string>
</resources>
